@@ -3,6 +3,7 @@
 ==============================
 Release 5.*
 ==============================
+2014-06-27    EnhancedTreeView: Add command to be executed if the selected item is changed
 2014-06-26    EnhancedTreeViewItem: Correct binding of ContentStretching if its set on the parent tree only
 2014-06-25    NavigationBar: Add NavigationBar
 2014-06-08    NullToBooleanConverter, NullToVisibilityConverter: Make converters sealed
